auth complete, refactoring
