# docs/swagger.yaml
@@ -46,6 +46,23 @@ definitions:
         example: bottle_name
         type: string
     type: object
+  model.Bra:
+    properties:
+      id:
+        example: 1
+        type: integer
+      metadata:
+        $ref: '#/definitions/model.BraMetadata'
+      name:
+        example: aaaa
+        type: string
+    type: object
+  model.BraMetadata:
+    properties:
+      other:
+        example: bbbb
+        type: string
+    type: object
   model.UpdateAccount:
     properties:
       name:
@@ -382,6 +399,35 @@ paths:
       summary: Show a bottle
       tags:
       - bottles
+  /bras:
+    get:
+      consumes:
+      - application/json
+      description: get bras
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Bra'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.HTTPError'
+      summary: List bras
+      tags:
+      - bras
   /examples/attribute:
     get:
       consumes:
